--- a/src/pug/article.pug
+++ b/src/pug/article.pug
@@ -15,9 +15,8 @@ html(lang="ru")
 		.container
 			+header
 			main.content
-				+hero
-				+recent
-				+featured
+				+article
+				
 			+footer
 		
 		script(src="static/js/main.js" type='module')
