--- a/src/pug/blog.pug
+++ b/src/pug/blog.pug
@@ -15,9 +15,10 @@ html(lang="ru")
 		.container
 			+header
 			main.content
-				+hero
-				+recent
-				+featured
+				.wrapper
+					
+					+blog
+				
 			+footer
 		
 		script(src="static/js/main.js" type='module')
