--- a/src/pug/mixins/sections/sections.pug
+++ b/src/pug/mixins/sections/sections.pug
@@ -1,1 +1,9 @@
 include _header
+include _hero
+include _recent
+include _featured
+include _footer
+include _blog
+
+include _works
+include _article
