--- a/src/pug/mixins/sections/_header.pug
+++ b/src/pug/mixins/sections/_header.pug
@@ -1,8 +1,9 @@
 mixin header()
 	header.header.menu-box
-		.wrapper
+		.header__wrapper
 			.header__body
 				.burger
 					span.burger__decor
 				.header__menu
-					+menu('menu', ['one', 'two', 'three'])
+					+menu('menu', ['Work', 'Blog', 'Contact'])
+				
