--- a/src/pug/works.pug
+++ b/src/pug/works.pug
@@ -15,9 +15,9 @@ html(lang="ru")
 		.container
 			+header
 			main.content
-				+hero
-				+recent
-				+featured
+				.wrapper
+					+works
+				
 			+footer
 		
 		script(src="static/js/main.js" type='module')
