--- a/src/pug/mixins/mixin.pug
+++ b/src/pug/mixins/mixin.pug
@@ -40,5 +40,5 @@ mixin menu(classname, items)
 		ul(class=classname+'__list')
 			each item, index in items
 				li(class=classname+'__item')
-					a(class=classname+'__link' href="/"+links[index]+".html")= item
+					a(class=classname+'__link' href="./"+links[index]+".html")= item
 				
